style.css
/* ... */
/* remember to define focus styles! */

:focus {
	outline: 0;
}

body {
	line-height: 1;
	-webkit-text-size-adjust:none;
}

ol, ul {
	list-style: none;
}

/* tables still need 'cellspacing="0"' in the markup */

table {
	border-collapse: separate;
	border-spacing: 0;
}

caption, th, td {
	text-align: left;
	font-weight: normal;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: "";
}

blockquote, q {
	quotes: "" "";
}

/* @end */

/* @group General */

body{
	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	font-size: 13px;
	font-weight: 400;
}

.container {
	width: 100%;
	margin: 0 auto;
	max-width: 1024px;
	padding: 0 15px;
	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
}

.clear{
	clear: both;
}

/* @end */

/* @group Page */

/* This is the main page frame */

#page-container {
	width: 100%;
	background: #fdfdfd;
    padding: 2.25% 4.5%;
	margin: 30px 0 35px 0;
	
	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	
	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.1);
	-moz-box-shadow:0 1px 2px rgba(0,0,0,0.1);
	box-shadow:0 1px 2px rgba(0,0,0,0.1), inset 0 0 2px rgba(0,0,0,0.1125);
	border: 1px solid #cbc9c7;
}



/* @end */

/* @group Logo */

#logo {
	position: relative;
	margin: 20px 0 25px 0;
}

#logo.logo-centered{
	text-align: center;
}

#logo a.logo-link{
	text-decoration: none;
}

#logo h1{
	display: inline-block;
	color: #555;
	font-family: "Terminal Dosis", Arial, Helvetica, Geneva, sans-serif;
	font-size: 52px;
	font-weight: 200;
	margin-bottom: 0.2em;
}

#logo h3{
	display: inline-block;
	color: #666;
	font-size: 13px;
}

#logo img {
	max-width: 100%;
	height: auto;
}

/* @group Search Form */

#logo #searchform{
	position: absolute;
	top: 50%;
	right: 0;
	margin-top: -12px;
}

#logo #searchform label{
	display: none;
}

#logo #searchform #searchsubmit{
	display: none;
}

#logo #searchform #s{
	width: 28px;
	padding: 4px;
	border: 1px solid #EEEEEE;
	border-width: 0 0 1px 0;
	font-size: 0.9em;
	
	font-weight: 200;
	
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	box-sizing:border-box;
	
	-webkit-transition: all 0.275s ease-in-out;
	-moz-transition: all 0.275s ease-in-out;
	-o-transition: all 0.275s ease-in-out;
	-ms-transition: all 0.275s ease-in-out;
	transition: all 0.275s ease-in-out;
	
	background: #F9F9F9 url(images/mag.png) no-repeat 10px center;
	
	padding-left: 30px;
	
	color: #777;
}

#logo #searchform #s:focus{
	width: 180px;
}

/* @end */



/* @end */

/* @group Main Menu */

#menu ul{
    display: block;
	padding: 0px;
	text-align: center;
	margin-bottom: 25px;
	
	border: 1px solid #EEEEEE;
	border-width: 1px 0;
	background: #F9F9F9;
}

#menu ul li{
	display: inline-block;
	padding: 22px 25px;
	position: relative;
}

#menu ul li a{
	text-decoration: none;
	font-size: 1em;
	color: #505050;
}

#menu ul li ul{
	visibility: hidden;
	display: block;
	
	position: absolute;
	background: #F5F5F5;
	
	z-index: 10;
	
	top: 100%;
	left: 50%;
	width: 160px;
    margin-left: -80px;
	border-top: 1px solid #E4E4E4;
	
	background-color: #F4F4F4;
	border-color: #DDDDDD;

    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

#menu ul li li ul{
    margin-left: 0;
    top: 0;
    left: 160px;
}

#menu ul li ul li a{
    display: block;
	color: #606060;
	font-size: 0.9em;
}

#menu ul ul li{
	width: 160px;
	text-align: center;
	padding: 10px 0;
}

#menu ul li:hover > ul{
	visibility: visible;
	display: block;
}

#menu .mobilenav-main-link {
    font-weight: 500;
    font-size: 14px;
}


#menu .mobilenav-main-link .mobile-nav-icon{
    display: inline-block;
    width: 13px;
    height: 15px;
    background: green;
    margin: 0 7px -3px 0;
    background: url(./images/navigate.png) no-repeat;
}

/* @end */

/* @group Post */

.post{
	margin-bottom: 30px;
}

/* @group Entry Title */

h1.entry-title,
h1.archive-title{
	font-size: 2.2em;
	margin: 1em 0 0.4em 0;
	text-align: center;
	color: #333;
	font-family: "Dosis", Arial, Helvetica, Geneva, sans-serif;
	font-size: 28px;
	font-weight: 200;
	line-height: 1.25em;
}

h1.entry-title.noinfo{
	margin-bottom: 30px;
}

h1.entry-title a{
	text-decoration: none;
	color: inherit;
}



/* @end */

.post:last-child{
	margin-bottom: 0;
}

.post .post-info{
	margin-bottom: 30px;
	text-align: center;
	color: #A6A6A6;
	font-size: 11.5px;
}

.post .post-info strong,
.post .post-info a{
	font-weight: 500;
	text-decoration: none;
	color: #808080;
}

.post-navigation{
	margin-top: 15px;
	margin-bottom: 35px;
}

.post-navigation a{
	display: block;
	color: #505050;
	text-decoration: none;
}

.post-navigation a:hover{
	color: #333;
}

.post-navigation a[rel=prev]{
	float: left;
}

.post-navigation a[rel=next]{
	float: right;
}

@media screen and (max-width:480px) {
	.post .content {
		-moz-column-count: 1 !important;
		-webkit-column-count: 1 !important;
		column-count: 1 !important;
	}
}

/* @group Featured Image */

.post .featured-image{
	position: relative;
}

.post img.main-image {
	max-width: 100%;
	height: auto;
}

.post img.main-image.mobile{
	display: none;
}

@media screen and (max-width:480px){
	.post img.main-image.mobile{
		display: block;
	}
	
	.post img.main-image.desktop{
		display: none;
	}
}

/* @end */

/* @group Bar below content */

.post .below-content {
	color: #666;
	padding: 20px 10px;
	text-align: right;
	border-style: solid;
	background: #FAFAFA;
	margin-top: 30px;
	
	border: 1px solid #EEEEEE;
	border-width: 1px 0;
	background: #F9F9F9;
}

.post .below-content svg,
.post .below-content img{
	display: inline-block;
	margin-bottom: -4px;
	margin-right: 6px;
	margin-left: 6px;
}

.post .below-content svg {
    fill: #999;
}

.post .below-content a{
	color: #666;
	text-decoration: none;
	font-style: italic;
}

.post .below-content p{
	height: 1em;
	line-height: 1;
}

/* @group Tags */

.post .below-content .tags{
	float: left;
}
/* ... */

